Configure-external-gateway/Deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx-test
        image: <nginx-image>
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: ns
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - port: 8080
    targetPort: 80
