Configure-external-gateway/gateway.yaml

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-https
  namespace: ns
  annotations:
    networking.gke.io/certmap: <your cert-map>
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  addresses:
  - type: NamedAddress
    value: <the ip name of your reserved ip>
